--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,8 +1,8 @@
 [package]
 name          = "jws"
-version       = "0.2.0"
+version       = "0.2.1"
 authors       = ["Maarten de Vries <maarten@de-vri.es>"]
-description   = "JSON Web Signature for Rust!"
+description   = "JSON Web Signature for Rust"
 documentation = "http://docs/rs/jws/"
 repository    = "http://github.com/de-vri-es/jws"
 readme        = "README.md"
