--- a/Cargo.toml
+++ b/Cargo.toml
@@ -11,9 +11,12 @@ license       = "BSD-2-Clause"
 edition       = "2018"
 
 [dependencies]
-rust-crypto  = "0.2"
-serde        = "1.0"
-serde_derive = "1.0"
-serde_json   = "1.0"
-base64       = "0.10"
-derive-error = "0.0"
+crypto-mac    = "0.7"
+digest        = "0.8"
+hmac          = "0.7"
+sha2          = "0.8"
+serde         = "1.0"
+serde_derive  = "1.0"
+serde_json    = "1.0"
+base64        = "0.10"
+derive-error  = "0.0"
