--- a/Cargo.toml
+++ b/Cargo.toml
@@ -20,3 +20,6 @@ serde_derive  = "1.0"
 serde_json    = "1.0"
 base64        = "0.10"
 derive-error  = "0.0"
+
+[dev-dependencies]
+assert2 = "0.1.1"
