fix invalid link to documentation in Cargo.toml

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -3,7 +3,7 @@ name          = "jws"
 version       = "0.2.3"
 authors       = ["Maarten de Vries <maarten@de-vri.es>"]
 description   = "JSON Web Signature for Rust"
-documentation = "http://docs/rs/jws/"
+documentation = "http://docs.rs/jws/"
 repository    = "http://github.com/de-vri-es/jws"
 readme        = "README.md"
 keywords      = ["JWS", "JWT", "JSON", "web", "token"]
