Update Cargo.toml better link to https

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -3,8 +3,8 @@ name          = "jws"
 version       = "0.2.7"
 authors       = ["Maarten de Vries <maarten@de-vri.es>"]
 description   = "JSON Web Signature for Rust"
-documentation = "http://docs.rs/jws/"
-repository    = "http://github.com/de-vri-es/jws"
+documentation = "https://docs.rs/jws/"
+repository    = "https://github.com/de-vri-es/jws"
 readme        = "README.md"
 keywords      = ["JWS", "JWT", "JSON", "web", "token"]
 license       = "BSD-2-Clause"
